Change Log for OpenXava project
===============================

- showReferenceView=true in descriptions list to show a combo and a detail view at the same time for a reference.
- Table created by default for images gallery allows big images. 
- Fix: Generating PDF in list fails with Android. 
- New method XObjects.execute() to call dynamically methods with three arguments.
- View.setEditable(member, state) works for references and collection in addition of plain properties.
- Fix: If view is not initialized View.setEditable(member, state) is not propagate to groups. 
- "contains" instead of "starts" as default value in filters for string values in list and collections. 
- Fix: Text field font size and family inside dialogs are not the same than in a regular view.
- Delete buttons are red only on hover.
- Delete icons are red on hover.
- Icon instead of image for sorting rows in collections with @OrderColumn.
- Icons instead of images for messages.
- Icons instead of images for sort indicators in list and collections.
- Icon instead of image to reset filter values in list and collections.
- Icon instead of image for boolean values in list and collections.
- Icons instead of images for date and date/time editors and list filtering.
- Icon to throw calendar in DateTimeCalendar editor inside textfield.
- Fix: Icon in date fields hides some part of the date in some browsers. 
- Stereotype FILE supports multischema.
- New icon for going to first record in detail mode.
- Icons instead of images for page navigation in lists.
- Material Design Icons upgraded to 1.4.57.
- Icon instead of image for help.
- Icons instead of images for closing and opening frames.
- Icons for customizing list are of the same color (green).
- Icon for showing and hiding filter in list is in the same place.
- Icons instead of images for customizing list and collections.
- Icons instead of images for validation error and required.